--- a/MyStyle.css
+++ b/MyStyle.css
@@ -8,6 +8,9 @@ html{
     height: 100%;
     width: 100%;
 }
+div#ContactDiv{
+display: none !important;
+}
 table{
     background-color: transparent;
 }
