--- a/MyStyle.css
+++ b/MyStyle.css
@@ -96,6 +96,14 @@ button{
 	margin: 0px;
 }
 
+h3{
+    text-align: center !important;
+    margin-top: 3%;
+    font-size: 1.2vw;
+    font-family: Agency FB;
+    color: #2b4554;
+}
+
 #nav ul button{
 	display: inline-block;
 } 
