--- a/MyStyle.css
+++ b/MyStyle.css
@@ -1111,7 +1111,7 @@ input:focus, textarea:focus {
 
 
 
-.fond{position:absolute;padding-top:85px;top:0;left:0; right:0;bottom:0;
+.fond{padding-top:85px;top:0;left:0; right:0;bottom:0;
  background-color:#00506b;}
 
 .style_prevu_kit
