--- a/MyStyle.css
+++ b/MyStyle.css
@@ -1110,9 +1110,13 @@ input:focus, textarea:focus {
 
 
 
-
-.fond{padding-top:85px;top:0;left:0; right:0;bottom:0;
- background-color:#00506b;}
+.fond{
+padding-top:85px;
+top:0;
+left:0; 
+right:0;
+bottom:0;
+}
 
 .style_prevu_kit
 {
